--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "maniva consultoria",
+  "name": "maniva software",
   "short_name": "maniva",
   "theme_color": "#00af66",
   "background_color": "#fff",
