--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.29.0",
+    "openai": "^4.19.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-notion": "^3.0.0-beta.1",
